@@ -35,5 +35,7 @@
 
 [Mushy] Re-orginised some stuff to make sure that the packages and imports work correctly!
 
-[AAAA] Fixed a small package misspell in /tpto and added a check to see if the command is        beingran from the console. And if the player arg was not entered. So errors don't occur.
+[AAAA] Fixed a small package misspell in /tpto and added a check to see if the command is               being ran from the console. And if the player arg was not entered. So errors don't occur.
+
+[AAAA] Added the handler package and moved commands to the commands package.
 
